--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   margin: 0;
   padding: 0;
   user-select: none;
+  font-family: 'Archivo', sans-serif;
 }
 
 @font-face {
@@ -67,4 +68,5 @@ body {
 a {
   text-decoration: none;
 }
+
 
